# carve-scenarios-config

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/carve-common/: CMakeLists.txt  monitor_config.ini  monitor_env.ini  monitor_env_1.1.ini  monitor_env_2.1.ini  monitor_follower_timed.ini  skill_list_2.txt  skill_list_3.txt
app/carve-context/: carve.xml  sanquirico6.pgm
app/lua/: CMakeLists.txt  carve_speech.lua  followerSM.lua  monitor_basic_skill.lua  monitor_environment.lua  monitor_environment_1.1.lua  monitor_environment_2_1.lua  monitor_follower.lua  monitor_follower_timed.lua  rfsm_timeevent.lua  time.lua
app/maps/: CMakeLists.txt
app/sanQuirico/: CMakeLists.txt  gmapping_odom.launch  ikart_localize_from_yarp.launch  localizationServer.ini  localize.launch  maps_collection.ini  robotPathPlanner_cer.ini  sanquirico.map
app/sanquirico/: CMakeLists.txt  follower.ini  follower_person.ini  robotGoto_cer.ini  robotPathPlanner_cer.ini
app/sanquirico_sim/: CMakeLists.txt  follower_SIM_person.ini  follower_SIM_redball.ini  gazeboLocalizer.ini  localizationServer.ini  robotPathPlanner_cer.ini  robotPathPlanner_sim_cer.ini  sanquirico6_grid.yaml
app/scenarios/: CMakeLists.txt
app/yarpmanager/: CARVE_BT_helpers.xml  CARVE_Gazebo.xml  CARVE_Gazebo_BT_helpers.xml  CARVE_Gazebo_Follower_Person.xml  CARVE_Gazebo_Follower_Person_OpenPose.xml  CARVE_Gazebo_Follower_RedBall.xml  CARVE_Gazebo_Monitors.xml  CARVE_Gazebo_Navigation.xml  CARVE_Navigation_Gazebo.xml  CARVE_Navigation_R1.xml  CARVE_R1_BT_helpers.xml  CARVE_R1_Follower_Person_OpenPose.xml  Others.xml  (+7 more)
(+32 files in other folders)
