# Copyright (C) 2006-2018 Istituto Italiano di Tecnologia (IIT)
# Author: Alberto Cardellino alberto.cardellino@iit.it
# Author: Marco Randazzo marco.randazzo@iit.it
# All rights reserved.
#
# This software may be modified and distributed under the terms of the
# BSD-3-Clause license. See the accompanying LICENSE file for details.

add_subdirectory(maps)
add_subdirectory(scenarios)
add_subdirectory(yarpmanager)
add_subdirectory(sanQuirico)
